--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
           {%- endif -%}
         {% endfor -%}
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.github.repository_url }}">Placeholder</a>
+          <a class="nav-link" href="{{ site.github.repository_url }}">View me on GitHub</a>
         </li>
       </ul>
     </div>
